objects/Mmilestones__c.object
<CustomObject>
    <fields>
        <fullName>Actual_ElapseTime__c</fullName>
        <label>Actual ElapseTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapse_time__c</fullName>
        <label>Elapse time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stopped_time__c</fullName>
        <label>Stopped time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestones</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Elapse_time__c</columns>
        <columns>Actual_ElapseTime__c</columns>
        <columns>Stopped_time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>case number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>